# xgym

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  base.npz  kinvs.npz  pyproject.toml  requirements.txt  serverInd.py  serverPickle.py  setup.py  testClient.py  ways.npz
.github/workflows/: lint.yml
scripts/: README.md  bringup.sh  camera.launch.py  camera.py  camera4human.py  debug.launch.py  demo.launch.py  embed.py  eval.py  filter.py  get_calibration.py  hamer_client.py  hand_tele.py  human.py  lift.py  lift_model.py  main.py  mano_pipe_v3.py  mano_read_npz.py  npz_reader.py  poptree.py  prepare_mano.py  read_memmap_visualize.py  read_npz.py  reader.py  reader_rlds.py  ros_sandbox.py  run_from_data.py  sandbox.py  sandbox.txt  sandbox_v2.py  see_image.py  stack.py  stack_model.py  test_safety_box.py  upload_parquet.py  view_calibration.py
scripts/client/: boundary_manager.py  box_boundary.py  testRobotActions.py
scripts/klaud_mano/: 0_cut.py  1_preprocess_video_hamer.py  2_clean_crop.py
scripts/mano/: 0_preprocess_video_hamer.py  1_crop_clean.py  2_visualize.py  3_cut.py  array_util.py  hamer_server.py  log.py  server.py  util.py  vitpose_model.py
scripts/server/: serverPickle.py
xarm-gym/: controllers.py
xarm-gym/gyms/: base.py  pickup.py
xarm-gym/utils/: boundary.py
xarm_gym/: __init__.py
xarm_gym.egg-info/: PKG-INFO  SOURCES.txt
xarm_gym/gyms/: __init__.py
xarm_gym/utils/: __init__.py  boundary.py
xgym/: __init__.py  controllers.py  model_controllers.py  xgym_dataset_builder.py
xgym/calibrate/: april.py  calibrate.py  main.py  registry.py  solve.py  source.py
xgym/calibrate/intr/: calibration.py  getImages.py  intr_cal.py
xgym/calibrate/urdf/: main.py  pyproject.toml  robot.py  xarm7_standalone.urdf
xgym/gyms/: __init__.py  base.py  human.py  lift.py  stack.py
xgym/gyms/wrapper/: sticky.py
xgym/lrbt/: README.md  convert.py  from_mano_npz.py  from_memmap.py  util.py
xgym/nodes/: README.md  __init__.py  bagger.py  base.py  camera.py  controller.py  footpedal.py  gov.py  heleo.py  model.py  robot.py  viz.py  writer.py  xgello.py
xgym/rlds/: __init__.py  base.py  embed.py
xgym/rlds/util/: __init__.py  _util.py  render.py  trajectory.py  transform.py
xgym/rlds/xgym_duck_mano/: __init__.py  task-embodiment:human,_task:put_the_ducks_in_the_bowl.npy  xgym_duck_mano.py
xgym/rlds/xgym_duck_single/: __init__.py  task-put_the_ducks_in_the_bowl.npy  xgym_duck_single.py
xgym/rlds/xgym_lift_mano/: __init__.py  main_nov10.py  task-embodiment:human,_task:pick_up_the_red_block.npy  xgym_lift_mano.py
xgym/rlds/xgym_lift_single/: task-pick_up_the_red_block.npy  xgym_lift_single.py  xgym_lift_single_ducks.py
xgym/rlds/xgym_play_single/: __init__.py  task-pickup_any_object.npy  xgym_play_single.py
xgym/rlds/xgym_stack_mano/: __init__.py  xgym_stack_mano.py
xgym/rlds/xgym_stack_single/: __init__.py  task-stack_all_the_blocks_vertically.npy  xgym_stack_single.py
xgym/utils/: __init__.py  boundary.py  camera.py  logger.py
xgym/viz/: __init__.py  mano.py  memmap.py
