[project]
name = "xgym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=14.3.0",
    "colorama>=0.4.6",
    "draccus>=0.10.0",
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "flax>=0.10.6",
    "gello",
    "gymnasium>=0.29.1",
    "imageio[ffmpeg]>=2.37.0",
    "jax>=0.6.0",
    "json-numpy>=2.1.0",
    "matplotlib>=3.10.1",
    "mlcroissant>=1.0.17",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    # "pyrealsense2>=2.55.1.6486",
    "pyspacemouse>=1.1.4",
    "rich>=14.0.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.8",
    "torch>=2.6.0",
    "tyro>=0.9.19",
    "uvicorn>=0.34.2",
    "xarm-python-sdk",
]

[tool.uv.sources]
gello = { git = "https://github.com/wuphilipp/gello_software.git" }
xarm-python-sdk = { git = "https://github.com/xArm-Developer/xArm-Python-SDK.git" }
