[project]
name = "xgym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=14.3.0",
    "colorama>=0.4.6",
    "ffmpeg>=1.4",
    "flax>=0.10.6",
    "gymnasium>=0.29.1",
    "imageio[ffmpeg]>=2.37.0",
    "jax>=0.6.0",
    "mlcroissant>=1.0.17",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pupil-apriltags>=1.0.4.post11",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    # "pyrealsense2>=2.55.1.6486",
    "pytorch-kinematics>=0.7.0", # 0.7.5 ?
    "pytransform3d>=3.14.0",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "tyro>=0.9.19",
    "webpolicy",
    "xacro>=1.13.3",
    # envlogger[tfds]
    # bsuite
]



[project.optional-dependencies]
ctrl = [
    "gello>=0.0.1",
    "pyspacemouse>=1.1.4",
    "pyudev>=0.24.3",
    "pyzmq>=26.4.0",
    "xarm-python-sdk>=1.15.1",
]
data = [
    "lerobot>=0.1.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.0",
]

[tool.uv.sources]
gello = { git = "https://github.com/wuphilipp/gello_software.git" }
xarm-python-sdk = { git = "https://github.com/xArm-Developer/xArm-Python-SDK.git" }
lerobot = { git = "https://github.com/huggingface/lerobot" }
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
